Refactoring via splitting of services